# build-recipes

./: LICENSE  README.md
ase/: kommand
ase/examples/: sisu-3.11.0  sisu-3.15.0  sisu-3.9.1  sisu-git-2016-04-01  taito-3.11.0
cython/: kommand
cython/examples/: sisu-0.23.4
gpaw/: build.sh  build_20.1.0.sh  gcc.py  kommand  patch-initpy.diff  patch-pblas.diff  pytest.sh
gpaw-bundle/: build.sh
gpaw-bundle/examples/archer-knl-0.11.0/: kommand
gpaw-bundle/setup/: customize-knl.py  customize-sisu.py  customize-taito.py  load.sh  patch-intel-ccompiler.diff  patch-intel-fcompiler.diff
gpaw-conda/: build.sh  environment.yml
gpaw-conda/setup/: customize-puhti.py  gcc.py
gpaw-stack/: kommand
gpaw-stack/examples/taito-gpu-2017-01/: kommand  kommand-gpaw
gpaw/examples/davide-1.1.0/: build.sh
gpaw/examples/davide-1.1.0-cuda/: build.sh
gpaw/examples/mahti/: build_ase-master_rhel8.sh  build_gpaw_20.1.0.sh  build_gpaw_rhel8.sh
gpaw/examples/mahti-1.5.2/: build.sh
gpaw/examples/mahti-20.1.0/: build.sh
gpaw/examples/puhti/: build_gpaw_rhel8.sh
gpaw/examples/puhti-1.1.0-cuda/: build.sh
gpaw/examples/puhti-1.4.0/: build.sh
gpaw/examples/puhti-1.5.2/: build.sh
gpaw/examples/puhti-1.5.2-cuda/: build.sh
gpaw/examples/puhti-20.1.0/: build.sh
gpaw/examples/puhti-20.1.0-cuda/: build.sh
gpaw/examples/puhti-21.1.0/: build.sh
gpaw/examples/puhti-21.1.0-cuda/: build.sh
gpaw/examples/sisu-0.11.0/: kommand  patch-testpy.diff
gpaw/examples/sisu-1.1.0/: kommand  patch-initpy.diff
gpaw/examples/sisu-1.2.0/: customize-sisu.py  gcc.py  kommand  patch-test.diff
gpaw/examples/sisu-git-2016-04-01/: kommand  patch-initpy.diff
gpaw/examples/sisu-vdwxc-1.1.0/: customize-gnu.py  gcc.py  kommand
gpaw/examples/taito-1.1.0/: kommand
gpaw/examples/taito-1.2.0/: customize-taito.py  kommand
gpaw/examples/taito-1.3.0/: gcc.py  kommand
gpaw/examples/taito-1.4.0/: build.sh
gpaw/examples/taito-git-2016-09-30/: customize-taito.py  kommand
gpaw/setup/: calculator.patch  customize-mahti-elpa.py  customize-mahti-mt-elpa.py  customize-mahti-mt.py  customize-mahti.py  customize-puhti.py  customize-sisu.py  customize-taito.py  gcc.py  hirshfeld.patch  lrtdfft2.patch  patch-xc.diff  setup.patch  siteconfig-mahti-mt.py  siteconfig-mahti-omp.py  siteconfig-mahti.py  siteconfig-puhti.py  siteconfig_hpcx.py  test.patch  xc_as_string.patch
gromacs/: kommand-mic  patch-atomsbuilder.diff  patch-resource-division.diff
gromacs/examples/: salomon-5.1.1-mic  taito-5.0.7-mic  taito-5.1.1-mic
hip/examples/puhti-5.4.4/: build.sh
hotbit/examples/: taito-2016-01-08
iphreeqc/lumi/: download_compile_install.sh
iphreeqc/puhti/: download_compile_install.sh
kokkos/: build_install_lumi.sh
kokkos/example/: CMakeLists.txt
kokkos/example/external_installation/: run.sh
kokkos/example/external_installation/src/: CMakeLists.txt  kernels.cpp
kokkos/example/internal_installation/: CMakeLists.txt  Makefile  README.md  run.sh
kokkos/example/internal_installation/sbatch/: lumi_gpu.sh  mahti_gpu.sh
kokkos/example/internal_installation/src/: CMakeLists.txt  kernels.cpp  main.cpp
kokkos/example/src/: main.cpp
libvdwxc/examples/: sisu-2016-11
libxc/: kommand
libxc/examples/: puhti-4.3.4  sisu-2.1.2  sisu-4.0.2  taito-2.1.3  taito-3.0.0
nose/: kommand
numpy/: kommand  site.cfg-sisu-template
numpy/examples/sisu-1.10.4/: kommand
numpy/examples/taito-1.9.2-intel/: kommand  (+2 more)
numpy/intel/: kommand  patch-intel.diff  site.cfg
omniperf/lumi/: README.md  build.sh  env.yaml  post_build.sh  requirements.txt
openblas/: build.sh
pymic/: install-pymic.sh  kommand
python/: build.sh  kommand
python-extra/: build.sh  kommand
python-extra/intel/: kommand  patch-intel-ccompiler.diff  patch-intel-fcompiler.diff
python/intel/: kommand
scalable-python/: kommand  load.sh
scalable-python/examples/: sisu-1.1  sisu-1.2
scalapack/: build.sh
scalapack/setup/: load-scalapack.sh
scipy/: kommand
scipy/examples/: sisu-0.16.1
scorep/: build_scorep.sh
setuptools/: kommand
tau/local/: build.sh
tau/lumi/: build.sh  build_tau.sh  build_tau_pdt.sh
vasp/: build_gnu_openblas.sh  build_intel.sh  makefile.include_mahti
(+74 files in other folders)
